--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
         header .position-absolute h1 a:hover {
             opacity: 0.7;
         }
-        h2, h3 {
+        h1, h2, h3 {
             color: #000000;
-        }
-        h1 {
-            color: #ffffff;
         }
         section {
             background-color: #ffffff;
@@ -130,7 +127,7 @@
 </head>
 <body>
     <header class="position-relative">
-        <img src="https://kadesjos.se/assets/bilder/Nyheter/_1152xAUTO_fit_center-center_80_none/yllefabriken-byggnad2-beskuren.webp" alt="Hus" class="img-fluid w-100 h-100" style="object-fit: cover;">
+        <img src="w21249BJdDwFL17d.jpg" alt="Hus" class="img-fluid w-100 h-100" style="object-fit: cover;">
         <div class="position-absolute top-50 start-50 translate-middle text-white text-center rounded">
             <h1><a href="index.html" rel="#home">BRF Hinden</a></h1>
             <p>En bostadsrättsförening i Lindesberg</p>
@@ -240,7 +237,7 @@
                 <li>Passersystem: 2015</li>
                 <li>Fjärrvärmeväxlare: 2016</li>
                 <li>Fönster: 2019</li>
-                <li>Laddstolpar 2024</li>
+                <li>Laddstolpar: 2024</li>
             </ul>
         </div>
     </section>
