--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <header class="position-relative">
-        <img src="w21249BJdDwFL17d.jpg" alt="Hus" class="img-fluid w-100 h-100" style="object-fit: cover;">
+        <img src="lagenhet.jpg" alt="Hus" class="img-fluid w-100 h-100" style="object-fit: cover;">
         <div class="position-absolute top-50 start-50 translate-middle text-white text-center rounded">
             <h1><a href="index.html" rel="#home">BRF Hinden</a></h1>
             <p>En bostadsrättsförening i Lindesberg</p>
@@ -191,11 +191,12 @@
             <h2 class="text-center">Styrelsen</h2>
             <ul>
                 <li>Gunnar Hundal - Ordförande</li>
-                <li>Maria Jansson - Sekreterare</li>
+                <li>Gunnar Ljungsten - Ledamot</li>
                 <li>Ulf Sjöberg - Ledamot</li>
+                <li>Pter Tybell - Ledamot</li>
                 <li>Anna-Liisa Söderlund - Ledamot</li>
+                <li>Maria Jansson - Ledamot</li>
                 <li>Dennis Åkergren - Ledamot</li>
-                <li>Gunnar Ljungsten - Ledamot (utsedd av HSB Mälardalarna)</li>
             </ul>
         </div>
     </section>
@@ -213,9 +214,9 @@
             <p>Lägenhetsyta: 4 771 m²</p>
             <p>Föreningen har även:</p>
             <ul>
-                <li>5 hyresrättslokaler</li>
+                <li>6 hyresrättslokaler</li>
                 <li>17 garage</li>
-                <li>21 parkeringsplatser</li>
+                <li>14 parkeringsplatser</li>
                 <li>1 permobilgarage</li>
             </ul>
         </div>
@@ -226,18 +227,18 @@
             <h2 class="text-center">Utveckling</h2>
             <h3>Större underhåll och investeringar</h3>
             <ul>
-                <li>Renovering balkonger: 2004</li>
-                <li>Isolering vind: 2010</li>
-                <li>Bredbandsinstallation: 2010</li>
-                <li>Byte av taktegel 43:an: 2011</li>
-                <li>Nya ventiler kök/bad: 2013</li>
-                <li>Utvändigt målning: 2014</li>
-                <li>OVK-besiktning: 2014</li>
-                <li>Lägenhetsdörrar: 2015</li>
-                <li>Passersystem: 2015</li>
-                <li>Fjärrvärmeväxlare: 2016</li>
-                <li>Fönster: 2019</li>
                 <li>Laddstolpar: 2024</li>
+                <li>Fönster: 2019</li>
+                <li>Fjärrvärmeväxlare: 2016</li>
+                <li>Passersystem: 2015</li>
+                <li>Lägenhetsdörrar: 2015</li>
+                <li>OVK-besiktning: 2014</li>
+                <li>Utvändigt målning: 2014</li>
+                <li>Nya ventiler kök/bad: 2013</li>
+                <li>Byte av taktegel 43:an: 2011</li>
+                <li>Bredbandsinstallation: 2010</li>
+                <li>Isolering vind: 2010</li>
+                <li>Renovering balkonger: 2004</li>
             </ul>
         </div>
     </section>
