--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <li>Gunnar Hundal - Ordförande</li>
                 <li>Gunnar Ljungsten - Ledamot</li>
                 <li>Ulf Sjöberg - Ledamot</li>
-                <li>Pter Tybell - Ledamot</li>
+                <li>Peter Tybell - Ledamot</li>
                 <li>Anna-Liisa Söderlund - Ledamot</li>
                 <li>Maria Jansson - Ledamot</li>
                 <li>Dennis Åkergren - Ledamot</li>
